After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 762041 - Pressing F1 does NOT launch yelp
Pressing F1 does NOT launch yelp
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: Interface
3.19.x
Other Linux
: Normal normal
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-02-14 18:13 UTC by Bjørn Lie
Modified: 2016-02-24 19:19 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Assign key binding for the help dialog (804 bytes, patch)
2016-02-18 16:19 UTC, Iulian Radu
committed Details | Review

Description Bjørn Lie 2016-02-14 18:13:23 UTC
Pressing F1 does not launch yelp.
Tested with 3.19.1 (webkitgtk 2.11.5), but was confirmed to also be present on 3.18/2.10 

Sorry for not including any debugging clues!
Comment 1 Iulian Radu 2016-02-18 16:19:38 UTC
Created attachment 321598 [details] [review]
Assign key binding for the help dialog
Comment 2 Michael Catanzaro 2016-02-18 17:30:25 UTC
Review of attachment 321598 [details] [review]:

I thought this was going to be a lot more complicated :p
Comment 3 Michael Catanzaro 2016-02-24 19:19:17 UTC
Attachment 321598 [details] pushed as 399d469 - Assign key binding for the help dialog