Assign key binding for the help dialog

https://bugzilla.gnome.org/show_bug.cgi?id=762041